Criação de conteudo
adição de receitas

--- a/laranjalimao.html
+++ b/laranjalimao.html
@@ -50,8 +50,8 @@
                 <li>4ª volta: 24pb - 1 aum + 2pb (6x)</li>
                 <li>5ª volta: 30pb - 1 aum + 3pb (6x)</li>
                 <li>6ª volta: 36pb - 1 aum + 4pb (6x)</li>
-                <li>7ª volta: 42pb - 1 red + 5pb (6x)</li>
-                <li>8ª volta: 48pb - 1 red + 6pb (6x)</li>
+                <li>7ª volta: 42pb - 1 aum + 5pb (6x)</li>
+                <li>8ª volta: 48pb - 1 aum + 6pb (6x)</li>
                 <li>Corte o frio e troque para a cor branca</li>
                 <li>9ª volta: 54pb - 1 red + 7pb (6x)</li>
                 <li>Corte o frio e deixe uma sobra de mais ou menos 30cm</li>
