--- a/melancia.html
+++ b/melancia.html
@@ -28,52 +28,48 @@
     </header>
     <main>
         <h2>
-            Laranja/Limão
+            Melancia
         </h2>
         <div class="passoapasso">
             <h3>Lista de Material</h3>
             <p>Nessa receita você vai precisar de:</p>
             <ol>
-                <li>Linha de croche na cor: laranja, 2 tons de verde, branco, amarelo</li>
+                <li>Linha de croche na cor: vermelho, 2 tons de verde, branco, preto</li>
                 <li>Agulha de crochet compatível com a linha</li>
                 <li>Agulha de tapeceiro para as costuras</li>
                 <li>Enchimento sintético, soliconado, suficiente para preencher a peça</li>
-                <li>Um disco de plastico ou papelão resistente para manter a forma reta de meia laranja/limão</li>
+                <li>Um disco de plastico ou papelão resistente dobrado ao meio</li>
             </ol>
             <h3>Passo a Passo</h3>
             <p>Parte reta</p>
             <ol>
-                <li>Inicie um laço mágico com o fio laranja ou verde claro</li>
+                <li>Inicie um laço mágico com o fio vermelho</li>
                 <li>1ª volta: 6pb (laço mágico) </li>
                 <li>2ª volta: 12pb - 6 aum </li>
                 <li>3ª volta: 18pb - 1 aum + 1pb (6x)</li>
                 <li>4ª volta: 24pb - 1 aum + 2pb (6x)</li>
                 <li>5ª volta: 30pb - 1 aum + 3pb (6x)</li>
                 <li>6ª volta: 36pb - 1 aum + 4pb (6x)</li>
-                <li>7ª volta: 42pb - 1 red + 5pb (6x)</li>
-                <li>8ª volta: 48pb - 1 red + 6pb (6x)</li>
+                <li>7ª volta: 42pb - 1 aum + 5pb (6x)</li>
                 <li>Corte o frio e troque para a cor branca</li>
-                <li>9ª volta: 54pb - 1 red + 7pb (6x)</li>
-                <li>Corte o frio e deixe uma sobra de mais ou menos 30cm</li>
-                <li>Borde linhas retas na cor branca conforme a foto da peça</li>
+                <li>8ª volta: 48pb - 1 aum + 6pb (6x)</li>
+                <li>Corte o frio e troque para a cor verde clara</li>
+                <li>9ª volta: 54pb - 1 aum + 7pb (6x)</li>
+                <li>Com o fio preto na agulha de tapeceiro, espalhe pontos pelo disco, de modo que simule sementes espelhadas</li>
             </ol>
             <p>Casca</p>
             <ol>
-                <li>Inicie um laço mágico com o fio amarelo ou verde escuro</li>
-                <li>1ª volta: 6pb (laço mágico) </li>
-                <li>2ª volta: 12pb - 6 aum </li>
-                <li>3ª volta: 18pb - 1 aum + 1pb (6x)</li>
-                <li>4ª volta: 24pb - 1 aum + 2pb (6x)</li>
-                <li>5ª volta: 30pb - 1 aum + 3pb (6x)</li>
-                <li>6ª volta: 36pb - 1 aum + 4pb (6x)</li>
-                <li>7ª volta: 42pb - 1 red + 5pb (6x)</li>
-                <li>8ª volta: 48pb - 1 red + 6pb (6x)</li>
-                <li>9ª volta: 54pb - 1 red + 7pb (6x)</li>
-                <li>10ª volta: 54pb e repita a mesma quantidade de pontos ate a volta nº 15</li>
+                <li>Para a confecção da casca você vai usar os dois tons de verde ao mesmo tempo</li>
+                <li>Comece com o fio claro, e faça uma corrente e um ponto baixo na corrente</li>
+                <li>Vire e faça 2pb no ponto de base </li>
+                <li>Vire e faça 2pb no mesmo ponto de base (2x)</li>
+                <li>Vire e faça  2pb + 1pb de outra cor + 2 pb</li>
+                <li>Agora vc vai crescento a peça sempre aumentando dois pontos nas laterais a cada 2 carreiras</li>
+                <li>Quanto tiver 10 careiras repita a largura por 7 vezes e na carreira nº 18 reduza 2 pontos a cada 2 carreiras até finalizar com 1 ponto</li>
+                <li>Essa peça terá 27 carreiras e a largura maxima de 10pontos</li>
                 <li>Corte o fio deixando 30 cm de sobra para fechar a peça</li>
                 <li>Costure as duas partes do trabalho unindo até a metade da curcunferencia</li>
-                <li>Posicione o círculo de plástico por dentro da parte reta e encha a peça mantendo a fibra em contato com o disco e com a parte da casca</li>
-                <li>Ao terminar a circunferencia introduza a agulha por dentro da peça e retire-a pelo centro da parte da casca. fazendo um ponto que repuxe o centro pra dentro. Simulando o formato da fruta.</li>
+                <li>Posicione o círculo de plástico dobrado ao meio por dentro da parte reta e encha a peça mantendo a fibra em contato com o disco e com a parte da casca</li>
                 <li>Arremate o ponto com um nó na costura e esconda o frio de arremate dentro da peça</li>
             </ol>
         </div>
