--- a/receitas.html
+++ b/receitas.html
@@ -31,38 +31,51 @@
         <div class="receita">
             <ul>
                 <li>
-                    <p class="titulo">Moranguinho</p>
-                    <p>Veja como criar uma frutinha para usar como chaveiro.</p>
-                    <img src="morando.jpg" alt="Morango de Amigurumi">
+                     <a class="receita-item" href="morango.html"> 
+                        <p class="titulo">Moranguinho</p>
+                        <p>Veja como criar uma frutinha para usar como chaveiro.</p>
+                        <img src="morando.jpg" alt="Morango de Amigurumi">
+                     </a>
                 </li>
                 <li>
-                    <p class="titulo">Bananinha</p>
-                    <p>Essa fofura é bem fácil de fazer, confira.</p>
-                    <img src="banana.jpg" alt="Banana de Amigurumi">
+                    <a class="receita-item" href="banana.html">
+                        <p class="titulo">Bananinha</p>
+                        <p>Essa fofura é bem fácil de fazer, confira.</p>
+                        <img src="banana.jpg" alt="Banana de Amigurumi">
+                    </a>
                 </li>
                 <li>
-                    <p class="titulo">Uvinha</p>
-                    <p>Com a técnica básica você consegue criar essa linda peça.</p>
-                    <img src="uva.jpg" alt="Uva de Amigurumi">
+                    <a class="receita-item" href="uva.html">
+                        <p class="titulo">Uvinha</p>
+                        <p>Com a técnica básica você consegue criar essa linda peça.</p>
+                        <img src="uva.jpg" alt="Uva de Amigurumi">
+                    </a>
                 </li>
-            </ul>
+             </ul>
         </div>
         <div class="receita">
             <ul>
                 <li>
-                    <p class="titulo">Melancia</p>
-                    <p>Linda e colorida, essa peça vai conquistar seu coração.</p>
-                    <img src="melancia.jpg" alt="Melancia de Amigurumi">
+                    <a class="receita-item" href="melancia.html">
+                        <p class="titulo">Melancia</p>
+                        <p>Linda e colorida, essa peça vai conquistar seu coração.</p>
+                        <img src="melancia.jpg" alt="Melancia de Amigurumi">
+                    </a>
                 </li>
                 <li>
-                    <p class="titulo">Laranja/Limão</p>
-                    <p>Agora um opção para você soltar a criatividade.</p>
-                    <img src="laranja-limao.jpg" alt="Laranja e limão de Amigurumi">
+                    <a class="receita-item" href="laranjalimao.html">
+                        <p class="titulo">Laranja/Limão</p>
+                        <p>Agora um opção para você soltar a criatividade.</p>
+                        <img src="laranja-limao.jpg" alt="Laranja e limão de Amigurumi">
+                    </a>
                 </li>
                 <li>
-                    <p class="titulo">Miranha</p>
-                    <p>Que tal algo mais desafiador? Um fofinho cabeça-de-teia!</p>
-                    <img src="homem-aranha.jpg" alt="Boneco homem aranha de Amigurumi">
+                    <a class="receita-item" href="miranha.html">
+                        <p class="titulo">Miranha</p>
+                        <p>Que tal algo mais desafiador? Um fofinho cabeça-de-teia!</p>
+                        <img src="homem-aranha.jpg" alt="Boneco homem aranha de Amigurumi">
+                        <p style="font-size: 10px;">Patrocinado</p>
+                    </a>
                 </li>
             </ul>
         </div>
