--- a/receitas.html
+++ b/receitas.html
@@ -73,7 +73,7 @@
                     <a class="receita-item" href="miranha.html">
                         <p class="titulo">Miranha</p>
                         <p>Que tal algo mais desafiador? Um fofinho cabeça-de-teia!</p>
-                        <img src="homem-aranha.jpg" alt="Boneco homem aranha de Amigurumi">
+                        <img src="homem-aranha.jpg" alt="Boneco homem aranha de Amigurumi estilo funko">
                         <p style="font-size: 10px;">Patrocinado</p>
                     </a>
                 </li>
